- Refactor: Removes ProviderStrategy class [#qubIT-Omnis-7913]

2.5.0 (20-01-2025)
- Refactor: Removes unused create method that does not receive a description in AccessControlProfile [#qubIT-Omnis-7974]
- Refactor: Removes ObjectProviderStrategy field from AccessControlProfile entity [#qubIT-Omnis-7054]
- Refactor: Makes ProviderStrategy abstract class deprecated [#qubIT-Omnis-8000]
- Refactor: Removes ALL_OF_TYPE_OR_SUBTYPE_CACHE from ObjectProfilesCache class [#qubIT-Omnis-7914]
- Refactor: Removes ObjectProfileCacheService [#qubIT-Omnis-7916]
- Refactor: Creates new create method that does not receive the objectsProviderStrategy [#qubIT-Omnis-7921]

2.4.2 (10-12-2024)
- Refactor: Removes code related to AccessControlProfile's deprecated locked attribute [#qubIT-Omnis-6993]
- Refactor: Makes AccessControlProfile's system attribute required in the DML [#qubIT-Omnis-7160] 

2.4.1 (28-10-2024)
- Refactor: Makes isRestricted and isAutoGenerated methods in AccessControlPermission return boolean [#qubIT-Omnis-7088]
- Bug fix: Ensures NPEs are not thrown in isRestricted method in AccessControlProfile [#qubIT-Omnis-7116]

2.4.0 (17-10-2024)
- New feature: Adds description field to AccessControlPermission and AccessControlProfile entities [#qubIT-Omnis-6987]

2.3.0 (09-10-2024)
- Refactor: Adds system field to AccessControlProfile entity and marks the locked field's getters and setters as deprecated [#qubIT-Omnis-6980]

2.2.0 (07-10-2024)
- Refactor: Removes locked field from AccessControlPermission entity [#qubIT-Omnis-6964]

2.1.1 (02-09-2024)
- Improvement: Upgrades parent [#qubIT-Omnis-6687]

2.1.0 (02-09-2024)
- Improvement: Ensures Release Notes is in the jar [#qubIT-Omnis-6579]
- Improvement: Updates guava from 21.0 to 33.2.1-jre [#qubIT-Omnis-5869]

2.0.0 (17-06-2024)
- Improvement: Updates foundation core api version to 7.0.0 [#qubIT-Omnis-4737]

1.9.0 (27-01-2023)
- Improvement: Implementing access control interfaces of OMNIS.cloud platform

1.8.2 (19-03-2021)