@@ -1,4 +1,5 @@
 - Refactor: Removes ProviderStrategy class [#qubIT-Omnis-7913]
+- Refactor: Removes deprecated create method in AccessControlProfile [#qubIT-Omnis-7975]
 
 2.5.0 (20-01-2025)
 - Refactor: Removes unused create method that does not receive a description in AccessControlProfile [#qubIT-Omnis-7974]
